<resources>
    <string name="app_name">Inacap App</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="telef_no">Telefóno</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="terminos">Aceptar Terminos y Condiciones</string>
    <string name="enviar">Enviar</string>
    <string name="contacto">Contacto</string>
    <string name="describa_el_problema">Describa el problema</string>
    <string name="explique_brevemente">Explique brevemente</string>
    <string name="ingrese_capturas_de_pantalla_opcional">Ingrese capturas de pantalla (Opcional)</string>
    <string name="apodo">Apodo</string>
    <string name="opciones">Opciones</string>
    <string name="back_description">Allows the user to go back</string>
    <string name="avatar_description">User photo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_pantalla_principal">PatallaPrincipalActivity</string>
    <string name="loginTitulo">Login</string>
    <string name="ok">Aceptar</string>
    <string name="alert_title">Error</string>
    <string name="alert_lackOfData">Se deben completar todos los campos para continuar</string>
    <string name="alert_wrongValueFormat">Debes colocar un formato válido al Correo y el Teléfono\nEj:+56978589014 ejemplo@correo.com</string>
    <string name="alert_wrongPassword">La contraseñas ingresadas no es correcta</string>
    <string name="alert_wrongPasswordConfirmation">La contraseñas ingresadas no coinciden</string>
    <string name="alert_userAlreadyExist">Ya existe un usuario con el correo ingresado</string>
    <string name="alert_userNotFound">No se ha encontrado una cuenta asociada al correo ingresado</string>
    <string name="alert_offerNotFound">No se ha encontrado oferta con el id indicado</string>
    <string name="alert_done">Acción realizada correctamente</string>
    <string name="code">Code</string>
    <string name="title_activity_usuario_crud">USUARIO CRUD</string>
    <string name="id_producto">Id Producto</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="precio">Precio</string>

    <string-array name="crud_array">
        <item>Inserción</item>
        <item>Actualización</item>
        <item>Eliminación</item>
        <item>Selección</item>
    </string-array>
</resources>